# egit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
egit/: args_parsers.py  console.py  exceptions.py  git_hooks.py  git_wrapper.py  main.py  repository.py  runner.py  utils.py
