[tool.poetry]
name = "egit"
version = "0.1.4"
description = ""
authors = ["Aissa Ouboukioud <aissa.1bacsm1@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
egit="egit.main:main"

[tool.poetry.dependencies]
python = ">=3.11"
rich = "^13.9.4"
gitpython = "^3.1.43"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
